Integración de Pick de calendario y cambios menores

--- a/Front/authguard/src/app/destino-viaje/destino-viaje.component.html
+++ b/Front/authguard/src/app/destino-viaje/destino-viaje.component.html
@@ -8,13 +8,13 @@
             </div>
             <mat-card-title>{{destino.nombreDestino}}</mat-card-title>
             
-            <mat-card-subtitle>{{destino.nombreOrganizador}}</mat-card-subtitle>
+            <mat-card-subtitle>Por: {{destino.nombreOrganizador}} para inciar {{destino.fechaInicial.getDate()}}/{{destino.fechaInicial.getMonth()}}/{{destino.fechaInicial.getFullYear()}}</mat-card-subtitle>
         </mat-card-header>
         <img mat-card-image src="assets/images/big/img4.jpg" alt="Photo of a Shiba Inu">
         <mat-card-content>
+            
             <p>
-                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan. A small, agile dog that copes
-                very well with mountainous terrain, the Shiba Inu was originally bred for hunting.
+               {{destino.descripcion}}
             </p>
             <p>Servicios</p>
             <ul>
