--- a/Front/authguard/src/app/layouts/full/header/header.component.html
+++ b/Front/authguard/src/app/layouts/full/header/header.component.html
@@ -1,5 +1,5 @@
 <button [matMenuTriggerFor]="profile" mat-icon-button class="m-r-5">
-    <img src="assets/images/users/1.jpg" alt="user" class="profile-pic"> </button>
+    {{userName}}</button>
 <mat-menu #profile="matMenu" class="mymegamenu">
     <button mat-menu-item>
         <mat-icon>exit_to_app</mat-icon> Sign Out </button>
