Validación Login  y creación de componente

--- a/Front/authguard/src/app/destino-viaje/destino-viaje.component.html
+++ b/Front/authguard/src/app/destino-viaje/destino-viaje.component.html
@@ -27,8 +27,8 @@
                 </li>
             </ul>
             <mat-card-actions>
-                <button mat-raised-button color="accent" (click)="ir()">Navegar!</button>
-                <button mat-button [routerLink]="['/destino']">Ver Detalle</button>
+                <button mat-raised-button color="accent" (click)="ir()">Editar</button>
+                <button mat-button [routerLink]="['/destino']">Eliminar</button>
             </mat-card-actions>
         </mat-card-content>
     </mat-card>
