--- a/Front/authguard/src/app/login/login.component.html
+++ b/Front/authguard/src/app/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="login-register" style="background-image:url(assets/images/background/login.jpg);">
     <div class="login-register-box">
-        <div class="bg-info text-white m-b-10 text-center p-t-10 p-b-10 alert-box">
+        <!-- <div class="bg-info text-white m-b-10 text-center p-t-10 p-b-10 alert-box">
             <span class="m-r-10">Username : admin</span> |
             <span class="m-l-10">Password : admin123</span>
-        </div>
+        </div> -->
         <mat-card class="m-t-10">
         <mat-card-content>
         <form id="loginform">
@@ -25,23 +25,11 @@
                     <input matInput type="password" placeholder="Password" required="" #p2>
                     </mat-form-field>
                 </div>
-                <!-- col half-->
-                <!-- <div fxFlex.gt-sm="50" fxFlex.gt-xs="50">
-                    <mat-checkbox color="warn">Remember me</mat-checkbox>
-                </div> -->
-                <!-- col half-->
-                <!-- <div fxFlex.gt-sm="50" fxFlex.gt-xs="50" class="text-right">
-                    <a [routerLink]="['/authentication/forgot']" class="link">Forgot pwd?</a>
-                </div> -->
-                <!-- col full-->
                 <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
                     <button mat-raised-button color="primary" class="btn-block btn-lg m-t-20 m-b-20" (click)="check(u1.value, p2.value)" type="button">Login</button>
                 </div>
                 <!-- col full-->
                 <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100" class="text-center">
-                    <!-- <span>Don't have an account?
-                        <a [routerLink]="['/authentication/register']" class="text-info link">Register</a>
-                    </span> -->
                 </div>
             </div>
         </form>
