--- a/Front/authguard/src/app/destino-viaje/destino-viaje.component.html
+++ b/Front/authguard/src/app/destino-viaje/destino-viaje.component.html
@@ -8,7 +8,7 @@
             </div>
             <mat-card-title>{{destino.nombreDestino}}</mat-card-title>
             
-            <mat-card-subtitle>Por: {{destino.nombreOrganizador}} para inciar {{destino.fechaInicial.getDate()}}/{{destino.fechaInicial.getMonth()}}/{{destino.fechaInicial.getFullYear()}}</mat-card-subtitle>
+            <mat-card-subtitle>Por: {{destino.nombreOrganizador}} para inciar {{destino.obtenerFecha().getDay()}}/{{destino.obtenerFecha().getMonth()}}/{{destino.obtenerFecha().getFullYear()}}</mat-card-subtitle>
         </mat-card-header>
         <img mat-card-image src="assets/images/big/img4.jpg" alt="Photo of a Shiba Inu">
         <mat-card-content>
@@ -16,7 +16,7 @@
             <p>
                {{destino.descripcion}}
             </p>
-            <p>Servicios</p>
+            <!-- <p>Servicios</p>
             <ul>
                 <li *ngFor = "let s of destino.servicios"> 
                     <span [ngSwitch]="s">
@@ -25,10 +25,10 @@
                         
                     </span>
                 </li>
-            </ul>
+            </ul> -->
             <mat-card-actions>
                 <button mat-raised-button color="accent" (click)="ir()">Editar</button>
-                <button mat-button [routerLink]="['/destino']">Eliminar</button>
+                <button mat-button (click)="borrarDestino(destino)">Eliminar</button>
             </mat-card-actions>
         </mat-card-content>
     </mat-card>
