--- a/Front/authguard/src/app/destino-viaje/destino-viaje.component.html
+++ b/Front/authguard/src/app/destino-viaje/destino-viaje.component.html
@@ -10,9 +10,9 @@
             
             <!-- <mat-card-subtitle>Por: {{destino.nombreOrganizador}} para inciar {{destino.obtenerFecha().getDay()}}/{{destino.obtenerFecha().getMonth()}}/{{destino.obtenerFecha().getFullYear()}}</mat-card-subtitle> -->
             <mat-card-subtitle>Por: {{destino.nombreOrganizador}} para inciar {{fechaComponente.getDate()}}/{{fechaComponente.getMonth()}}/{{fechaComponente.getFullYear()}}</mat-card-subtitle>
-            <mat-card-subtitle>Por: {{destino.nombreOrganizador}} para inciar </mat-card-subtitle>
+            <!-- <mat-card-subtitle>Por: {{destino.nombreOrganizador}} para inciar </mat-card-subtitle> -->
         </mat-card-header>
-        <img mat-card-image src="assets/images/big/img4.jpg" alt="Photo of a Shiba Inu">
+        <img mat-card-image src="assets/images/big/img7.png" alt="Photo of trip">
         <mat-card-content>
             
             <p>
