--- a/Front/authguard/src/app/form-destino-viaje/form-destino-viaje.component.html
+++ b/Front/authguard/src/app/form-destino-viaje/form-destino-viaje.component.html
@@ -54,7 +54,7 @@
             <p>Ingresa las fechas ideales para inciar el viaje</p>
            
             <mat-form-field class="example-full-width" appearance="fill">
-                <mat-label>Choose a date</mat-label>
+                <mat-label>Elige una Fecha</mat-label>
                 <input matInput [matDatepicker]="picker" (focus)="picker.open()" formControlName="fechaSeleccionada">
                 <div *ngIf="formGroupFormulario.controls['fechaSeleccionada'].valid"></div>
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
