--- a/Front/authguard/src/app/starter/starter.component.html
+++ b/Front/authguard/src/app/starter/starter.component.html
@@ -10,10 +10,45 @@
                 <div fxLayout="row" fxLayoutWrap="wrap">
                     <!-- column -->
                     <div fxFlex.gt-sm="50" fxFlex.gt-xs="50">
-                        Starter Page
+                        Los Viajes
                     </div>
                 </div>
             </mat-card-content>
+            <div fxLayout="row">
+                <div fxFlex.gt-sm="100%">
+                    <mat-card>
+                        <mat-card-content>
+                            <mat-card-title>¿Qué es viajar? 
+                                
+                            </mat-card-title>
+                            <mat-card-subtitle>Fuente: https://deilusionarecuerdo.com/que-es-el-viaje/
+                                
+                            </mat-card-subtitle>
+                            <p>Difícil expresar con una sola palabra el significado de otra sin echar mano del simple sinónimo. Más complicado si cabe cuando la palabra tiene tanta fuerza y tantas historias escondidas entre sus letras, si acumula un bagaje que roza lo infinito, si con solo pronunciarla se despierta un remolino de sensaciones e incluso si hay quien ha hecho de esa palabra su estilo de vida. VIAJE…. </p>
+
+                            <p>El reto de definir el viaje con una sola palabra resultó ser demasiado grande,
+                                 así que hubo que echar mano de todos aquellos para quienes la palabra viaje tiene un gran significado.
+                                  Y descubrí que, obviamente, una sola palabra no bastaba pero que uniendo varias sí se conseguía un mapa semántico 
+                                  muy cercano a la realidad, al menos a nuestra realidad, la tuya y la mía. Bastó un sondeo en las redes para hacerme con un listado de palabras que me gritaban
+                                   desde el cuaderno ¿qué es para ti el viaje?</p>
+
+                                   <p>Y por ahí anduvieron las palabras varios días esperando a que las letras llegaran para poder darles vida. Una vez que éstas invadieron mi mesa, el reto pasó a ser un
+                                        juego de scrabble durante el que me decepcioné viendo que no todas las palabras de la lista tenían cabida,
+                                         que el español usa demasiadas Ces, eNes, que me faltaban letras para escribir todo lo que significa el viaje.
+                                          Pero al menos sí fue posible montar las primeras del ranking en el que hubo una vencedora por abrumadora mayoría.</p>
+            
+                            <mat-card-actions>
+                                <button mat-icon-button color="accent">
+                                    <mat-icon>favorite</mat-icon>
+                                </button>
+                                <button mat-icon-button>
+                                    <mat-icon>share</mat-icon>
+                                </button>
+                            </mat-card-actions>
+                        </mat-card-content>
+                    </mat-card>
+                </div>
+            </div>
         </mat-card>
     </div>
     <!-- column -->
