--- a/Front/authguard/src/app/layouts/full/sidebar/sidebar.component.html
+++ b/Front/authguard/src/app/layouts/full/sidebar/sidebar.component.html
@@ -11,15 +11,11 @@
     <!-- Profile - style you can find in header.scss -->
     <!-- ============================================================== -->
     <div class="profile-text">
-        <a [matMenuTriggerFor]="sdprofile" class=""> Markarn Doe
+        <a> App Viajes 
             <i class="ti-angle-down font-12 m-l-5"></i>
         </a>
     </div>
-    <mat-menu #sdprofile="matMenu" class="mymegamenu">
-        <button mat-menu-item>
-            <mat-icon>exit_to_app</mat-icon> Sign Out
-        </button>
-    </mat-menu>
+
 </div>
 
 <mat-nav-list appAccordion>
