--- a/Front/authguard/src/app/lista-destinos/lista-destinos.component.html
+++ b/Front/authguard/src/app/lista-destinos/lista-destinos.component.html
@@ -24,13 +24,15 @@
         <mat-card-title>Ingreso de Información</mat-card-title>
         <mat-card-subtitle>Acompañantes y destino</mat-card-subtitle>
 
-        <app-form-destino-viaje (onItemAdded)="agregado($event)"></app-form-destino-viaje>
-         
+        <app-form-destino-viaje (onItemAdded)="agregado($event)" (onItemEditToSave)="itemAEditar($event)"></app-form-destino-viaje>
+        
     </mat-card-content>
 </mat-card>
 
 <div fxLayout="row wrap">
-    <app-destino-viaje *ngFor="let d of destinos;" [destino]="d" (onItemEditado)="editarViaje($event)" (onDelete)="eliminarDestino($event)"></app-destino-viaje>
+    <div fxFlex.gt-sm="33.33%" fxFlex="100">
+    <app-destino-viaje *ngFor="let d of destinos;" [destino]="d" (onItemEditado)="editarViaje($event)" (onDelete)="eliminarDestino($event)" ></app-destino-viaje>
+    </div>
     <!-- <app-destino-viaje (onItemEditado) = "editarViaje($event)"></app-destino-viaje> -->
     <!-- <app-destino-viaje (propagar)="editar($event)"></app-destino-viaje>  -->
 </div>
